samples/_failures_safe/1761509118_c2e994_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fe80b80e.c:160:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  160 | void prim
      | ^~~~
